--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@ object-fit: cover;
 <p>Motivation: Make an ingishtful decision based on an survey of a public database. To minimize bias, lets audit the US Patent database to find freqeuncy of key design parameters. </p>
 </body>
 <h2>Objective & Tasks</h2>
-<p>The objective is to query, scrape, and analyze the US Patent and Trademark Office for bone tissue engineering related articles and then examine that resource for trends.The tasks to complete are:
+<p>The objective is to query, scrape, and analyze the US Patent and Trademark Office for bone tissue engineering related articles and then examine that resource for trends.The tasks to complete are: 
 
-(1) Build: Query the US Patent and Trademark database for bone tissue engineering terms, such as craniofacial, biomanufacturing, tissue engineering, biofabrication, osseointegration, mandible, and osteoconductive.
+(1) Build: Query the US Patent and Trademark database for bone tissue engineering terms, such as craniofacial, biomanufacturing, tissue engineering, biofabrication, osseointegration, mandible, and osteoconductive. 
 (2) Clean: Aggregate unique patents specific to area of interest. Patents must have 3 of the following terms (in addition to one of the search terms) to be included in further analysis. Terms include:  regenerative medicine, tissue engineering, bone, scaffold, orthodontic, biocompatible, biodegradable, and tissue scaffold.
 (3) Define: Define the size of the database. Plot the number of patents per year (annual and cumulative).
 (4) Geolocation: Define the geographic footprint of the database. Map the assignee address of the patents per year.
@@ -29,7 +29,7 @@ object-fit: cover;
 (6) Text Analysis: Count the frequency of words to identify the most prominent materials, products, pore shapes, sizes, and use cases by text analysis.
 *** not yet completed ***
 (7) Cross-reference Google Scholar for cited-by metric to identify most impactful work.
-(8) Plot occurances of the terms found in
+(8) Plot occurances of the terms found in 
 </p>
 </body>
 <h2>The History of Bone Tissue Engineering in the Patent Archive</h2>
@@ -41,7 +41,7 @@ object-fit: cover;
 <div class="container"><h2>Map of Bone Tissue Engineering in the Patent Archive</h2>
 <img alt="My Image" src="program_generated/patent/map/gif/patent.gif" /><img alt="My Image" src="program_generated/patent/map/all_years.png" /></div></center>
 </body>
-ata term:assignee_name</h3>
+or the metadata term:assignee_name</h3>
 <table>
 <tr>
 <th>assignee_name        </th>
