--- a/index.html
+++ b/index.html
@@ -19,19 +19,37 @@ object-fit: cover;
 <p>Motivation: Make an ingishtful decision based on an survey of a public database. To minimize bias, lets audit the US Patent database to find freqeuncy of key design parameters. </p>
 </body>
 <h2>Objective & Tasks</h2>
-<p>The objective is to query, scrape, and analyze the US Patent and Trademark Office for bone tissue engineering related articles and then examine that resource for trends.The tasks to complete are: 
-
-(1) Build: Query the US Patent and Trademark database for bone tissue engineering terms, such as craniofacial, biomanufacturing, tissue engineering, biofabrication, osseointegration, mandible, and osteoconductive. 
-(2) Clean: Aggregate unique patents specific to area of interest. Patents must have 3 of the following terms (in addition to one of the search terms) to be included in further analysis. Terms include:  regenerative medicine, tissue engineering, bone, scaffold, orthodontic, biocompatible, biodegradable, and tissue scaffold.
-(3) Define: Define the size of the database. Plot the number of patents per year (annual and cumulative).
-(4) Geolocation: Define the geographic footprint of the database. Map the assignee address of the patents per year.
-(5) Historical Material Usage: Plot the occurrances of specific materials in the patent database (annual and cumulative).
-(6) Text Analysis: Count the frequency of words to identify the most prominent materials, products, pore shapes, sizes, and use cases by text analysis.
-*** not yet completed ***
-(7) Cross-reference Google Scholar for cited-by metric to identify most impactful work.
-(8) Plot occurances of the terms found in 
+<p>The objective is to query, scrape, and analyze the US Patent and Trademark Office for bone tissue engineering related articles and then examine that resource for trends.</center>
+The tasks to complete are: 
 </p>
-</body>
+<ol>
+<li>
+ Build: Query the US Patent and Trademark database for bone tissue engineering terms, such as craniofacial, biomanufacturing, tissue engineering, biofabrication, osseointegration, mandible, and osteoconductive. 
+</li>
+<li>
+ Clean: Aggregate unique patents specific to area of interest. Patents must have 3 of the following terms (in addition to one of the search terms) to be included in further analysis. Terms include:  regenerative medicine, tissue engineering, bone, scaffold, orthodontic, biocompatible, biodegradable, and tissue scaffold.
+</li>
+<li>
+ Define: Define the size of the database. Plot the number of patents per year (annual and cumulative).
+</li>
+<li>
+ Geolocation: Define the geographic footprint of the database. Map the assignee address of the patents per year.
+</li>
+<li>
+ Historical Material Usage: Plot the occurrances of specific materials in the patent database (annual and cumulative).
+</li>
+<li>
+ Text Analysis: Count the frequency of words to identify the most prominent materials, products, pore shapes, sizes, and use cases by text analysis.
+</li>
+*** not yet completed ***
+<li>
+ Cross-reference Google Scholar for cited-by metric to identify most impactful work.
+</li>
+<li>
+ Plot occurances of the terms found in 
+</li>
+</ol>)</body>
+<center>
 <h2>The History of Bone Tissue Engineering in the Patent Archive</h2>
 <p>The plot represents 7394 patents filed (8072 documents filed) with the US Patent and Trademark Office over a 47 year span, from 1973-2020.</p>
 <img alt="My Image" src="program_generated/patent/plots/all_patents_vs_year.png" /><img alt="My Image" src="program_generated/patent/word_count/plot/material_count_yearly.png" /></div></center>
@@ -41,11 +59,7 @@ object-fit: cover;
 <div class="container"><h2>Map of Bone Tissue Engineering in the Patent Archive</h2>
 <img alt="My Image" src="program_generated/patent/map/gif/patent.gif" /><img alt="My Image" src="program_generated/patent/map/all_years.png" /></div></center>
 </body>
-or the metadata term:assignee_name</h3>
-<table>
-<tr>
-<th>assignee_name        </th>
-<th>Number of Patents</th>
+r of Patents</th>
 </tr>
 <tr>
 <th>Warsaw Orthopedic, Inc.</th>
