added terms to count.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,19 @@ The tasks to complete are:
 </body>
 <div><body>
 <center>
+<img alt="My Image" src="program_generated/patent/10_count_term/plot_cumulative/biological_models.png" /><img alt="My Image" src="program_generated/patent/10_count_term/plot/biological_models.png" /><img alt="My Image" src="program_generated/patent/10_count_term/barchart/biological_models.png" /></center>
+</body>
+</div><div><body>
+<center>
 <img alt="My Image" src="program_generated/patent/10_count_term/plot_cumulative/biological_process.png" /><img alt="My Image" src="program_generated/patent/10_count_term/plot/biological_process.png" /><img alt="My Image" src="program_generated/patent/10_count_term/barchart/biological_process.png" /></center>
+</body>
+</div><div><body>
+<center>
+<img alt="My Image" src="program_generated/patent/10_count_term/plot_cumulative/biological_source.png" /><img alt="My Image" src="program_generated/patent/10_count_term/plot/biological_source.png" /><img alt="My Image" src="program_generated/patent/10_count_term/barchart/biological_source.png" /></center>
+</body>
+</div><div><body>
+<center>
+<img alt="My Image" src="program_generated/patent/10_count_term/plot_cumulative/experiment_categories.png" /><img alt="My Image" src="program_generated/patent/10_count_term/plot/experiment_categories.png" /><img alt="My Image" src="program_generated/patent/10_count_term/barchart/experiment_categories.png" /></center>
 </body>
 </div><div><body>
 <center>
@@ -107,83 +119,7 @@ The tasks to complete are:
 <center>
 <img alt="My Image" src="program_generated/patent/10_count_term/plot_cumulative/size.png" /><img alt="My Image" src="program_generated/patent/10_count_term/plot/size.png" /><img alt="My Image" src="program_generated/patent/10_count_term/barchart/size.png" /></center>
 </body>
-</div><div><body>
-<center>
-<img alt="My Image" src="program_generated/patent/10_count_term/plot_cumulative/vivo.png" /><img alt="My Image" src="program_generated/patent/10_count_term/plot/vivo.png" /><img alt="My Image" src="program_generated/patent/10_count_term/barchart/vivo.png" /></center>
-</body>
-</div>metadata term:patent_year</h3>
-<table>
-<tr>
-<th>patent_year        </th>
-<th>Number of Patents</th>
-</tr>
-<tr>
-<th>2021</th>
-<th>762</th>
-</tr>
-<tr>
-<th>2020</th>
-<th>686</th>
-</tr>
-<tr>
-<th>2019</th>
-<th>672</th>
-</tr>
-<tr>
-<th>2017</th>
-<th>585</th>
-</tr>
-<tr>
-<th>2014</th>
-<th>572</th>
-</tr>
-<tr>
-<th>2016</th>
-<th>568</th>
-</tr>
-<tr>
-<th>2015</th>
-<th>524</th>
-</tr>
-<tr>
-<th>2013</th>
-<th>511</th>
-</tr>
-<tr>
-<th>2018</th>
-<th>509</th>
-</tr>
-<tr>
-<th>2012</th>
-<th>398</th>
-</tr>
-<tr>
-<th>2011</th>
-<th>319</th>
-</tr>
-<tr>
-<th>2010</th>
-<th>253</th>
-</tr>
-<tr>
-<th>2006</th>
-<th>160</th>
-</tr>
-<tr>
-<th>2009</th>
-<th>152</th>
-</tr>
-<tr>
-<th>2001</th>
-<th>147</th>
-</tr>
-<tr>
-<th>2003</th>
-<th>143</th>
-</tr>
-<tr>
-<th>2002</th>
-<th>143</th>
+</div>h>143</th>
 </tr>
 <tr>
 <th>2005</th>
